--- a/app/src/main/res/layout/update_student_info.xml
+++ b/app/src/main/res/layout/update_student_info.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="#5FD8E8"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
+        android:textSize="30dp"
+        android:gravity="center"
         android:layout_height="wrap_content"
         android:text="Update Student Details" />
 
@@ -13,29 +16,43 @@
         android:id="@+id/etName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:gravity="center"
         android:hint="enter name" />
 
     <EditText
         android:id="@+id/etAge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:gravity="center"
         android:hint="enter Age" />
 
     <EditText
         android:id="@+id/etAddress"
         android:layout_width="match_parent"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:hint="enter addresss" />
 
     <EditText
         android:id="@+id/etImgUrl"
         android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
         android:layout_height="wrap_content"
         android:hint="enter image URL" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="wrap_content"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
         android:layout_height="wrap_content">
 
         <RadioButton
@@ -63,6 +80,9 @@
     <Button
         android:id="@+id/btnUpdate"
         android:layout_width="match_parent"
+        android:layout_marginRight="70dp"
+        android:layout_marginLeft="70dp"
+        android:backgroundTint="@color/teal_700"
         android:layout_height="wrap_content"
         android:text="Update" />
 
@@ -70,6 +90,8 @@
         android:id="@+id/btnCancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="70dp"
+        android:layout_marginLeft="70dp"
         android:backgroundTint="#E91E63"
         android:text="Cancel" />
 
